--- a/pom.xml
+++ b/pom.xml
@@ -1,19 +1,28 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
-  <modelVersion>4.0.0</modelVersion>
+	<modelVersion>4.0.0</modelVersion>
 
-  <parent>
-    <groupId>org.openhab.binding</groupId>
-    <artifactId>pom</artifactId>
-    <version>2.0.0-SNAPSHOT</version>
-  </parent>
+	<parent>
+		<groupId>org.openhab.binding</groupId>
+		<artifactId>pom</artifactId>
+		<version>2.1.0-SNAPSHOT</version>
+	</parent>
 
-  <groupId>org.openhab.binding</groupId>
-  <artifactId>org.openhab.binding.neato</artifactId>
-  <version>2.0.0-SNAPSHOT</version>
+	<groupId>org.openhab.binding</groupId>
+	<artifactId>org.openhab.binding.neato</artifactId>
+	<version>2.0.0-SNAPSHOT</version>
 
-  <name>Neato Binding</name>
-  <packaging>eclipse-plugin</packaging>
+	<name>Neato Binding</name>
+	<packaging>eclipse-plugin</packaging>
 
+	<dependencies>
+		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.5</version>
+		</dependency>
+	</dependencies>
 </project>
