--- a/build.properties
+++ b/build.properties
@@ -3,7 +3,5 @@ output.. = target/classes
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               ESH-INF/,\
-               lib/gson-2.8.0-sources.jar,\
-               lib/gson-2.8.0.jar
+               ESH-INF/
 
