--- a/pom.xml
+++ b/pom.xml
@@ -1,21 +1,66 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://maven.apache.org/POM/4.0.0"
-	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
 
 	<modelVersion>4.0.0</modelVersion>
 
 	<parent>
 		<groupId>org.openhab.binding</groupId>
 		<artifactId>pom</artifactId>
-		<version>2.1.0-SNAPSHOT</version>
+		<version>2.2.0-SNAPSHOT</version>
 	</parent>
 
 	<groupId>org.openhab.binding</groupId>
 	<artifactId>org.openhab.binding.neato</artifactId>
-	<version>2.0.0-SNAPSHOT</version>
+	<version>2.2.0-SNAPSHOT</version>
 
 	<name>Neato Binding</name>
 	<packaging>eclipse-plugin</packaging>
+	
+  <profiles>
+	  <profile>
+		    <id>check</id>
+		    <build>
+		      <pluginManagement>
+		        <plugins>
+		          <plugin>
+		            <groupId>org.openhab.tools</groupId>
+		            <artifactId>static-code-analysis</artifactId>
+		            <version>${sat.version}</version>
+		            <executions>
+		              <execution>
+		                <phase>verify</phase>
+		                <goals>
+		                  <goal>checkstyle</goal>
+		                  <goal>pmd</goal>
+		                  <goal>findbugs</goal>
+		                  <goal>report</goal>
+		                </goals>
+		              </execution>
+		            </executions>
+		          </plugin>
+		        </plugins>
+		      </pluginManagement>
+		    </build>
+		  </profile>
+		  <profile>
+		    <id>check-bundles</id>
+		    <activation>
+		      <file>
+		        <exists>META-INF/MANIFEST.MF</exists>
+		      </file>
+		    </activation>
+		    <build>
+		      <plugins>
+		        <plugin>
+		            <groupId>org.openhab.tools</groupId>
+		            <artifactId>static-code-analysis</artifactId>
+		        </plugin>
+		      </plugins>
+		    </build>
+		  </profile>
+	  </profiles>
+		
 
 	<dependencies>
 		<!-- https://mvnrepository.com/artifact/commons-io/commons-io -->
@@ -25,4 +70,5 @@
 			<version>2.5</version>
 		</dependency>
 	</dependencies>
+ 
 </project>
