--- a/build.properties
+++ b/build.properties
@@ -1,7 +1,8 @@
-source.. = src/main/java/
+source.. = src/main/java/,\
+           src/main/resources/
 output.. = target/classes
 bin.includes = META-INF/,\
                .,\
                OSGI-INF/,\
-               ESH-INF/
-
+               ESH-INF/,\
+               about.html
